2004-02-18  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Samsung-ML-1510.xml, printer/Samsung-ML-1710.xml,
	  printer/Samsung-ML-1410.xml, printer/Samsung-ML-1440.xml,
	  printer/Samsung-ML-1450PS.xml, printer/Samsung-ML-1750.xml,
	  printer/Samsung-ML-1450.xml, printer/Samsung-ML-2150.xml,
	  printer/Samsung-ML-2151N.xml, printer/Samsung-ML-2152W.xml,
	  printer/Samsung-ML-2150PS.xml, printer/Samsung-ML-2151NPS.xml,
	  printer/Samsung-ML-2152WPS.xml, printer/Samsung-ML-2550.xml,
	  printer/Samsung-ML-2551N.xml, printer/Samsung-ML-2552W.xml,
	  printer/Samsung-ML-7300.xml, printer/Samsung-ML-7300N.xml,
	  printer/Samsung-ML-1430.xml, printer/Samsung-CLP-500.xml,
	  driver/gdi.xml, driver/ljet4.xml, driver/ljet4d.xml,
	  driver/pxlmono.xml, driver/Postscript.xml,
	  opt/pxlmono-PrintoutMode.xml, opt/160.xml,
	  opt/pxlmono-PrinterResolution.xml: Added new Samsung laser
	  printers.

2004-01-22  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/ppmtomd.xml, opt/ppmtomd-MediaType.xml,
	  opt/ppmtomd-ColorMode.xml, ppmtomd-ColourCorrection.xml: Updated
	  Foomatic data of "ppmtomd" driver to support version 1.1 of the
	  driver.

2004-01-16 Hin-Tak Leung <htl10@users.sourceforge.net>
	* opt/epsonepl-FlowControl.xml: Correcting illegal and off-PPD-spec 
	  characters in short-names.
	
2004-01-15 Hin-Tak Leung <htl10@users.sourceforge.net>
	* driver/epl5700l.xml, driver/epl5800l.xml,
	  driver/epl5900l.xml, driver/epl6100l.xml,
	  driver/epl6200l.xml,
	  opt/epsonepl-Density.xml, opt/epsonepl-Dpi.xml,
	  opt/epsonepl-FlowControl.xml, opt/epsonepl-PageSize.xml,
	  opt/epsonepl-Ritech.xml, opt/epsonepl-TonerSave.xml,
	  printer/Epson-EPL-5700L.xml, printer/Epson-EPL-5800L.xml,
	  printer/Epson-EPL-5900L.xml, printer/Epson-EPL-6100L.xml,
	  printer/Epson-EPL-6200L.xml:
	  Bringing all the Epson EPL-5x00L/6x00L related XML files up
	  to date with those on the driver's repository.
	
2003-12-19  Till Kamppeter <till.kamppeter@gmx.net>
