@@ -1,0 +1,51 @@
+<option type="enum" id="opt/drv_x125-Bidirectional">
+  <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+  <arg_longname>
+   <en>Bidirectional Printing</en>
+  </arg_longname>
+  <arg_shortname>
+   <en>Bidirectional</en><!-- backends only know <en> shortnames! -->
+  </arg_shortname>
+  <arg_execution>
+   <arg_group>General</arg_group>
+   <arg_order>130</arg_order>
+   <arg_spot>E</arg_spot>
+   <arg_substitution />
+   <arg_proto>%s</arg_proto>
+  </arg_execution>
+  <constraints>
+     <constraint sense="true">
+      <driver>drv_x125</driver>
+      <arg_defval>ev/drv_x125-Bidirectional-Yes</arg_defval>
+     </constraint>
+  </constraints>
+  <enum_vals>
+   <enum_val id="ev/drv_x125-Bidirectional-Yes">
+    <ev_longname>
+     <en>Yes</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>Yes</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>1</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-Bidirectional-No">
+    <ev_longname>
+     <en>No</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>No</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>0</ev_driverval>
+   </enum_val>
+  </enum_vals>
+</option>
