@@ -1,0 +1,64 @@
+<option type="enum" id="opt/drv_x125-ColorMode">
+  <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+  <arg_longname>
+   <en>Color Mode</en>
+  </arg_longname>
+  <arg_shortname>
+   <en>ColorMode</en><!-- backends only know <en> shortnames! -->
+  </arg_shortname>
+  <arg_execution>
+   <arg_group>General</arg_group>
+   <arg_order>120</arg_order>
+   <arg_spot>B</arg_spot>
+   <arg_substitution />
+   <arg_proto>%s</arg_proto>
+  </arg_execution>
+  <constraints>
+     <constraint sense="true">
+      <driver>drv_x125</driver>
+      <arg_defval>ev/drv_x125-ColorMode-CMYK</arg_defval>
+     </constraint>
+  </constraints>
+  <enum_vals>
+   <enum_val id="ev/drv_x125-ColorMode-Gray">
+    <ev_longname>
+     <en>Grayscale (Black ink cartridge)</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>Grayscale</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>k</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-ColorMode-CMY">
+    <ev_longname>
+     <en>3-ink color (Color ink cartridge)</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>CMY</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>cmy</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-ColorMode-CMYK">
+    <ev_longname>
+     <en>4-ink color (Both ink cartridges)</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>CMYK</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>cmyk</ev_driverval>
+   </enum_val>
+  </enum_vals>
+</option>
