@@ -1,0 +1,46 @@
+<option type="enum" id="opt/drv_x125-Device">
+  <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+  <arg_longname>
+   <en>Device</en>
+  </arg_longname>
+  <arg_shortname>
+   <en>Device</en><!-- backends only know <en> shortnames! -->
+  </arg_shortname>
+  <arg_execution>
+   <arg_group>Miscellaneous</arg_group>
+   <arg_order>200</arg_order>
+   <arg_spot>A</arg_spot>
+   <arg_substitution />
+   <arg_proto>%s</arg_proto>
+  </arg_execution>
+  <constraints>
+     <constraint sense='true'>
+      <driver>drv_x125</driver>
+      <printer>printer/Lexmark-X125</printer><!-- Lexmark X125 -->
+      <arg_defval>ev/drv_x125-dev_usb_lp0</arg_defval>
+     </constraint>
+  </constraints>
+  <enum_vals>
+   <enum_val id="ev/drv_x125-dev_usb_lp0">
+    <ev_longname><en>/dev/usb/lp0</en></ev_longname>
+    <ev_shortname><en>usb_lp0</en></ev_shortname>
+    <ev_driverval>/dev/usb/lp0</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-dev_usb_lp1">
+    <ev_longname><en>/dev/usb/lp1</en></ev_longname>
+    <ev_shortname><en>usb_lp1</en></ev_shortname>
+    <ev_driverval>/dev/usb/lp1</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-dev_usb_lp2">
+    <ev_longname><en>/dev/usb/lp2</en></ev_longname>
+    <ev_shortname><en>usb_lp2</en></ev_shortname>
+    <ev_driverval>/dev/usb/lp2</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-dev_usb_lp3">
+    <ev_longname><en>/dev/usb/lp3</en></ev_longname>
+    <ev_shortname><en>usb_lp3</en></ev_shortname>
+    <ev_driverval>/dev/usb/lp3</ev_driverval>
+   </enum_val>
+  </enum_vals>
+</option>
