@@ -1,0 +1,208 @@
+<option type="enum" id="opt/drv_x125-PageSize">
+  <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+  <arg_longname>
+   <en>Page Size</en>
+  </arg_longname>
+  <arg_shortname>
+   <en>PageSize</en><!-- backends only know <en> shortnames! -->
+  </arg_shortname>
+  <arg_execution>
+   <arg_group>General</arg_group>
+   <arg_order>100</arg_order>
+   <arg_spot>D</arg_spot>
+   <arg_required />
+   <arg_substitution />
+   <arg_proto>size=%s; </arg_proto>
+  </arg_execution>
+  <constraints>
+   <constraint sense="true">
+    <driver>drv_x125</driver>
+    <arg_defval>ev/drv_x125-PageSize-Letter</arg_defval>
+   </constraint>
+  </constraints>
+  <enum_vals>
+   <enum_val id="ev/drv_x125-PageSize-A4">
+    <ev_longname>
+     <en>A4</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>A4</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>a4</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-PageSize-A5">
+    <ev_longname>
+     <en>A5</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>A5</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>a5</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-PageSize-A6">
+    <ev_longname>
+     <en>A6</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>A6</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>a6</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-PageSize-Letter">
+    <ev_longname>
+     <en>US Letter</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>Letter</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>letter</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-PageSize-Legal">
+    <ev_longname>
+     <en>Legal</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>Legal</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>legal</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-PageSize-ISOB5">
+    <ev_longname>
+     <en>B5 (ISO)</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>ISOB5</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>isob5</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-PageSize-ISOB6">
+    <ev_longname>
+     <en>B6 (ISO)</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>ISOB6</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>isob6</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-PageSize-JISB5">
+    <ev_longname>
+     <en>B5 (JIS)</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>JISB5</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>jisb5</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-PageSize-JISB6">
+    <ev_longname>
+     <en>B6 (JIS)</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>JISB6</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>jisb6</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-PageSize-C5">
+    <ev_longname>
+     <en>C5</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>C5</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>c5</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-PageSize-C6">
+    <ev_longname>
+     <en>C6</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>C6</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>c6</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-PageSize-FLSA">
+    <ev_longname>
+     <en>Foolscap A</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>FLSA</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>flsa</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-PageSize-FLSE">
+    <ev_longname>
+     <en>Foolscap E</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>FLSE</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>flse</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-PageSize-Halfletter">
+    <ev_longname>
+     <en>Half Letter</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>HalfLetter</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>halfletter</ev_driverval>
+   </enum_val>
+  </enum_vals>
+</option>
