@@ -1,0 +1,65 @@
+<option type="enum" id="opt/drv_x125-Resolution">
+  <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+  <arg_longname>
+   <en>Resolution</en>
+  </arg_longname>
+  <arg_shortname>
+   <en>Resolution</en><!-- backends only know <en> shortnames! -->
+  </arg_shortname>
+  <arg_execution>
+   <arg_group>General</arg_group>
+   <arg_order>110</arg_order>
+   <arg_spot>C</arg_spot>
+   <arg_required />
+   <arg_substitution />
+   <arg_proto>%s</arg_proto>
+  </arg_execution>
+  <constraints>
+   <constraint sense="true">
+    <driver>drv_x125</driver>
+    <arg_defval>ev/drv_x125-Resolution-600x600</arg_defval>
+   </constraint>
+  </constraints>
+  <enum_vals>
+   <enum_val id="ev/drv_x125-Resolution-300x600">
+    <ev_longname>
+     <en>300x600 DPI</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>300x600</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>300</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-Resolution-600x600">
+    <ev_longname>
+     <en>600x600 DPI</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>600x600</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>600</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/drv_x125-Resolution-1200x600">
+    <ev_longname>
+     <en>1200x600 DPI</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>1200x600</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>1200</ev_driverval>
+   </enum_val>
+  </enum_vals>
+</option>
