@@ -1,0 +1,48 @@
+<printer id="printer/Lexmark-X125">
+  <make>Lexmark</make>
+  <model>X125</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>2400</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>2 cartridges (color and black or high yield color and high 
+            yield black)</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://www.lexmark.com/Canada/printers/inkjet/X125/index.html</url>
+  <lang>
+    <proprietary/>
+  <!--no pjl--><!--No "text"?--></lang>
+  <autodetect>
+    <usb>
+      <description>Lexmark X125</description>
+      <manufacturer>Lexmark</manufacturer>
+      <model>X125</model>
+    </usb>
+  </autodetect>
+  <functionality>D</functionality>
+  <driver>drv_x125</driver>
+  <!--not "unverified"-->
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+    THE DRIVER FOR THIS PRINTER REQUIRES SPECIAL SETUP.  Please see the
+    driver notes.
+    
+    With the simple driver &quot;drv_x125&quot; provided by Mark Roth
+    one can print black and white or color up to 1200x600 dpi.  Future 
+    versions of the driver will support higher resolutions.  There are no
+    other known drivers that support this printer and Lexmark does not
+    provide a Linux driver for it.  It is unknown whether fax and scanner
+    drivers for the Lexmark X125 are available.
+    </en>
+  </comments>
+</printer>
