@@ -1,3 +1,14 @@
+2004-02-27  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Lexmark-X125.xml: Added the Lexmark X125 multi-function
+	  device.
+
+	* driver/drv_x125.xml, opt/drv_x125-PageSize.xml,
+	  opt/drv_x125-Resolution.xml, opt/drv_x125-ColorMode.xml,
+	  opt/drv_x125-Bidirectional.xml, drv_x125-Device.xml: Added
+	  "drv_x125" driver for the Lexmark X125 (Thanks to Mark Roth,
+	  markroth8 at yahoo dot com).
+
 2004-02-18  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Samsung-ML-1510.xml, printer/Samsung-ML-1710.xml,
